# musubi-tuner

./: .gitignore  CONTRIBUTING.ja.md  CONTRIBUTING.md  README.ja.md  README.md  caption_images_by_qwen_vl.py  convert_lora.py  flux_2_cache_latents.py  flux_2_cache_text_encoder_outputs.py  flux_2_generate_image.py  flux_2_train_network.py  flux_kontext_cache_latents.py  flux_kontext_cache_text_encoder_outputs.py  flux_kontext_generate_image.py  flux_kontext_train_network.py  fpack_cache_latents.py  fpack_generate_video.py  hv_1_5_cache_latents.py  hv_1_5_cache_text_encoder_outputs.py  hv_1_5_generate_video.py  hv_1_5_train_network.py  hv_generate_video.py  hv_train_network.py  kandinsky5_cache_latents.py  kandinsky5_cache_text_encoder_outputs.py  kandinsky5_generate_video.py  kandinsky5_train_network.py  pyproject.toml  qwen_extract_lora.py  qwen_image_cache_latents.py  qwen_image_cache_text_encoder_outputs.py  qwen_image_generate_image.py  qwen_image_train.py  qwen_image_train_network.py  zimage_cache_latents.py  zimage_cache_text_encoder_outputs.py  zimage_generate_image.py  zimage_train.py  zimage_train_network.py
.ai/: claude.prompt.md  codex.prompt.md  gemini.prompt.md
.ai/context/: overview.md
.github/workflows/: ruff-lint.yml
dataset/: config_utils.py  dataset_config.md  image_video_dataset.py
docs/: advanced_config.md  dataset_config.md  flux_2.md  flux_kontext.md  framepack.md  framepack_1f.md  hunyuan_video.md  hunyuan_video_1_5.md  kandinsky5.md  qwen_image.md  sampling_during_training.md  tools.md  torch_compile.md  wan.md  wan_1f.md  zimage.md
frame_pack/: hunyuan_video_packed.py
hunyuan_model/: models.py  modulate_layers.py  text_encoder.py
modules/: custom_offloading_utils.py  fp8_optimization_utils.py
networks/: framepack_lora_inf_utils.py
src/musubi_tuner/: cache_latents.py  cache_text_encoder_outputs.py  caption_images_by_qwen_vl.py  convert_lora.py  flux_2_cache_latents.py  flux_2_cache_text_encoder_outputs.py  flux_2_generate_image.py  flux_2_train_network.py  flux_kontext_cache_latents.py  flux_kontext_cache_text_encoder_outputs.py  flux_kontext_generate_image.py  flux_kontext_train_network.py  fpack_cache_latents.py  fpack_cache_text_encoder_outputs.py  fpack_generate_video.py  fpack_train_network.py  hv_1_5_cache_latents.py  hv_1_5_cache_text_encoder_outputs.py  hv_1_5_generate_video.py  hv_1_5_train_network.py  hv_generate_video.py  hv_train.py  hv_train_network.py  kandinsky5_cache_latents.py  kandinsky5_cache_text_encoder_outputs.py  kandinsky5_generate_video.py  kandinsky5_train_network.py  merge_lora.py  qwen_extract_lora.py  qwen_image_cache_latents.py  qwen_image_cache_text_encoder_outputs.py  qwen_image_generate_image.py  qwen_image_train.py  qwen_image_train_network.py  wan_cache_latents.py  wan_cache_text_encoder_outputs.py  wan_generate_video.py  wan_train_network.py  zimage_cache_latents.py  zimage_cache_text_encoder_outputs.py  (+3 more)
src/musubi_tuner/dataset/: config_utils.py  dataset_config.md  image_video_dataset.py
src/musubi_tuner/flux/: flux_models.py  flux_utils.py
src/musubi_tuner/flux_2/: flux2_models.py  flux2_utils.py
src/musubi_tuner/frame_pack/: clip_vision.py  framepack_utils.py  hunyuan_video_packed.py  hunyuan_video_packed_inference.py  uni_pc_fm.py  utils.py  wrapper.py
src/musubi_tuner/gui/: config_manager.py  gui.ja.md  gui.md  gui.py  gui_implementation_plan.md  i18n_data.py
src/musubi_tuner/hunyuan_model/: attention.py  embed_layers.py  fp8_optimization.py  helpers.py  mlp_layers.py  models.py  modulate_layers.py  norm_layers.py  posemb_layers.py  text_encoder.py  token_refiner.py  vae.py
src/musubi_tuner/hunyuan_video_1_5/: hunyuan_video_1_5_models.py  hunyuan_video_1_5_modules.py  hunyuan_video_1_5_text_encoder.py  hunyuan_video_1_5_utils.py  hunyuan_video_1_5_vae.py
src/musubi_tuner/kandinsky5/: configs.py  generation_utils.py
src/musubi_tuner/kandinsky5/models/: attention.py  dit.py  nn.py  text_embedders.py  utils.py  vae.py
src/musubi_tuner/modules/: adafactor_fused.py  attention.py  custom_offloading_utils.py  fp8_optimization_utils.py  lr_schedulers.py
src/musubi_tuner/networks/: convert_hunyuan_video_1_5_lora_to_comfy.py  convert_z_image_lora_to_comfy.py  lora.py  lora_flux.py  lora_flux_2.py  lora_hv_1_5.py  lora_kandinsky.py  lora_qwen_image.py  lora_zimage.py
src/musubi_tuner/qwen_image/: qwen_image_autoencoder_kl.py  qwen_image_model.py  qwen_image_modules.py  qwen_image_utils.py
src/musubi_tuner/utils/: device_utils.py  image_utils.py  lora_utils.py  model_utils.py  safetensors_utils.py  sai_model_spec.py  train_utils.py
src/musubi_tuner/wan/configs/: __init__.py  shared_config.py  wan_i2v_14B.py  wan_i2v_A14B.py  wan_t2v_14B.py  wan_t2v_1_3B.py  wan_t2v_A14B.py
src/musubi_tuner/wan/modules/: __init__.py  attention.py  model.py
src/musubi_tuner/wan/utils/: __init__.py
src/musubi_tuner/zimage/: zimage_autoencoder.py  zimage_config.py  zimage_model.py  zimage_utils.py
utils/: built_in_extensions.py  extensions.py
